force-app/main/default/objects/Support_case__c/Support_case__c.object-meta.xml
<CustomObject>
    <description>Object to follow-up on support cases</description>
    <label>Support case</label>
    <nameField>
        <label>Support case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>