force-app/main/default/objects/Support_case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer submitting the support case</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support cases</relationshipLabel>
    <relationshipName>Support_cases</relationshipName>
    <type>Lookup</type>
</CustomField>