force-app/main/default/objects/Support_case__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact related to the support case</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support cases</relationshipLabel>
    <relationshipName>Support_cases</relationshipName>
    <type>Lookup</type>
</CustomField>