force-app/main/default/objects/Support_case__c/fields/SFDX_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case assigned to</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_cases</relationshipName>
    <type>Lookup</type>
</CustomField>