force-app/main/default/objects/Support_case__c/fields/SFDX_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>SFDX_Case_Description__c</fullName>
    <label>Case Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>